// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div>
    <p
      className="join-p"
    >
      Enter the code generated by your two-factor auth application, or one of your 
      <a
        href="https://support.sparkpost.com/customer/portal/articles/1948449"
        rel="noopener noreferrer"
        target="_blank"
      >
        backup codes
      </a>
      .
    </p>
  </div>
  <form
    onSubmit={[MockFunction]}
  >
    <Field
      autoFocus={true}
      component={[Function]}
      id="code"
      label="Code"
      name="code"
      placeholder="123456"
      validate={[Function]}
    />
    <Button
      primary={true}
      size="default"
      submit={true}
    >
      Log In
    </Button>
  </form>
</div>
`;

exports[`renders correctly verifying tfa 1`] = `
<div>
  <div>
    <p
      className="join-p"
    >
      Enter the code generated by your two-factor auth application, or one of your 
      <a
        href="https://support.sparkpost.com/customer/portal/articles/1948449"
        rel="noopener noreferrer"
        target="_blank"
      >
        backup codes
      </a>
      .
    </p>
  </div>
  <form
    onSubmit={[MockFunction]}
  >
    <Field
      autoFocus={true}
      component={[Function]}
      id="code"
      label="Code"
      name="code"
      placeholder="123456"
      validate={[Function]}
    />
    <Button
      disabled={true}
      primary={true}
      size="default"
      submit={true}
    >
      Logging In
    </Button>
  </form>
</div>
`;
